@@ -1180,8 +1180,8 @@ $ cvtool unsharpmask -u smoothsmooth.pnm -c 0.7 < smooth.pnm > sharp.pnm
 @cmindex wavelets
 @code{wavelets -t|--task=dwt -D|--daubechies=@var{D}-l|--level=@var{l}}@*
 @code{wavelets -t|--task=idwt -D|--daubechies=@var{D} -l|--level=@var{l}}@*
-@code{wavelets -t|--task=hard-thresholding -D|--daubechies=@var{D} -l|--level=@var{l} -T|--threshold=@var{T}}
-@code{wavelets -t|--task=soft-thresholding -D|--daubechies=@var{D} -l|--level=@var{l} -T|--threshold=@var{T}}
+@code{wavelets -t|--task=hard-thresholding -l|--level=@var{l} -T|--threshold=@var{T}}
+@code{wavelets -t|--task=soft-thresholding -l|--level=@var{l} -T|--threshold=@var{T}}
 
 Perform Discrete Wavelet Transform (DWT), Inverse Discrete Wavelet transform
 (IDWT), or manipulations on transformed data.
@@ -1194,7 +1194,7 @@ it has to be manually converted if necessary.
 Example:
 @example
 $ cvtool wavelets -t dwt -D 2 -l 1 < in.pfs > dwt.pfs
-$ cvtool wavelets -t soft-thresholding -D 2 -l 1 -T 0.5 < dwt.pfs > st.pfs
+$ cvtool wavelets -t soft-thresholding -l 1 -T 0.5 < dwt.pfs > st.pfs
 $ cvtool wavelets -t idwt -D 2 -l 1 < st.pfs > out.pfs
 @end example
 
